# digitalis

./: CMakeLists.txt  README.md
Releases/AU/AutomationQuantiser.component/Contents/: Info.plist
Releases/AU/BufferGlitchEngine.component/Contents/: Info.plist
Releases/AU/ClassicBufferStutter.component/Contents/: Info.plist
Releases/AU/DeterministicMachine.component/Contents/: Info.plist
Releases/AU/FFTBrutalist.component/Contents/: Info.plist
Releases/AU/FloatingPointCollapse.component/Contents/: Info.plist
Releases/AU/MelodicSkippingEngine.component/Contents/: Info.plist
Releases/AU/NyquistDestroyer.component/Contents/: Info.plist
Releases/AU/OverclockFailure.component/Contents/: Info.plist
Releases/AU/StreamingArtifactGenerator.component/Contents/: Info.plist
Releases/VST3/AutomationQuantiser.vst3/Contents/: Info.plist
Releases/VST3/BufferGlitchEngine.vst3/Contents/: Info.plist
Releases/VST3/ClassicBufferStutter.vst3/Contents/: Info.plist
Releases/VST3/DeterministicMachine.vst3/Contents/: Info.plist
Releases/VST3/FFTBrutalist.vst3/Contents/: Info.plist
Releases/VST3/FloatingPointCollapse.vst3/Contents/: Info.plist
Releases/VST3/MelodicSkippingEngine.vst3/Contents/: Info.plist
Releases/VST3/NyquistDestroyer.vst3/Contents/: Info.plist
Releases/VST3/OverclockFailure.vst3/Contents/: Info.plist
Releases/VST3/StreamingArtifactGenerator.vst3/Contents/: Info.plist
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tools/: MeasurePluginMain.cpp
